# nse-stock-screener

./: .bandit.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  COMPREHENSIVE_BUG_ANALYSIS_AND_REQUIREMENTS.md  Dockerfile  ISSUE_1_TESTING_GUIDE.md  MANIFEST.in  README.md  Requirements.md  TESTING_INFRASTRUCTURE.md  analyze_improvements.py  automation_demo.py  cli_analyzer.py  config_sample.json  docker-compose.yml  enhanced_analysis_wrapper.py  final_syntax_fix.ps1  fix_all_syntax.ps1  fix_example_types.ps1  fix_new_style_typing.ps1  fix_scripts_issues.ps1  fix_sonarqube_issues.ps1  fix_typing_syntax.ps1  fix_unicode.py  fixed_launcher.py  interactive_launcher.py  mypy.ini  nse_sector_filter.py  pyproject.toml  requirements.txt  run_screener.py  setup.py  start.bat  test_config_integration.py  test_data_ingestion.py  test_enums.py  test_fs2_data_pipeline.py  test_fs2_simplified.py  (+8 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml  maintenance.yml  pr-validation.yml  release.yml  security-pipeline.yml
config/: email_config.json  watchlists.json
data/: nse_only_symbols.txt
data/test/: README.md  test_symbols.txt
data/test/configs/: aggressive_test.json  conservative_test.json  quick_test.json
data/test/sample_results/: sample_analysis.json
data/test/scenarios/: bearish_market.json  bullish_market.json  high_volatility.json  sideways_market.json
docker/: entrypoint.sh  healthcheck.py
examples/: fs4_complete_example.py  sample_scoring_config.yaml
scripts/: automated_launcher.bat  automation_manager.py  check_deps.py  cleanup.bat  cleanup.ps1  cli_analyzer.py  code_cleanup.py  code_hygiene_analyzer.py  create_test_data.py  deploy.cmd  deploy.sh  docstring_standardizer.py  email_notifier.py  enhanced_launcher.bat  enterprise_dashboard.py  event_driven_automation.py  generate_summary.py  hygiene_checks.py  launcher.bat  manage_stock_lists.bat  multi_market_automation.py  sector_automation.py  setup_automation.py  setup_scheduler.ps1  simple_automation.py  smart_scheduler.py  stocks_analysis.bat  weekly_analysis.bat
src/: Equity_all.py  __init__.py  advanced_backtester.py  advanced_indicators.py  check_deps.py  composite_scorer.py  config.py  constants.py  core.py  corporate_actions.py  demo_enhanced_system.py  dynamic_watchlist_manager.py  early_warning_system.py  enhanced_cli.py  enhanced_early_warning_system.py  enhanced_launcher.py  error_isolation.py  fetch_stock_symbols.py  forecast_engine.py  intelligent_watchlist_manager.py  logging_config.py  optimal_entry_calculator.py  performance_benchmark.py  risk_manager.py  robust_data_fetcher.py  signal_generator.py  stock_analysis_monitor.py  strategic_entry.py  strategic_entry_constants.py  test_backtester_costs.py  test_corporate_actions.py  test_enums.py  test_logging_improvements.py  test_risk_manager_enhancement.py  validate_enum_centralization.py  watchlist_manager.py
src/api/: __init__.py
src/backtest/: __init__.py  execution_engine.py  fs6_integration.py  performance_metrics.py  persistence.py  report_generator.py  walk_forward.py
src/common/: __init__.py  config.py  enums.py  interfaces.py  paths.py  volume_thresholds.py
src/data/: __init__.py  cache.py  compat.py  connectors.py  corporate_actions.py  data_pipeline.py  fetchers.py  fetchers_impl.py  storage.py  validation.py  validation_core.py  validation_health.py  validation_rules.py
src/execution/: __init__.py
src/indicators/: __init__.py  base.py  config.py  engine.py  factories.py  numba_ops.py  technical.py  vectorized.py
src/indicators/validation/: __init__.py  stress_data.py  test_suite.py  utils.py
src/monitoring/: __init__.py  grafana_config.py  prometheus_metrics.py
src/performance/: __init__.py  caching_system.py  integration.py  parallel_engine.py  profiling_engine.py
src/risk/: __init__.py  enhanced_risk_manager.py  liquidity_validator.py  portfolio_controller.py  position_sizer.py  risk_config.py
src/scoring/: __init__.py  calibration.py  parameter_store.py  scoring_engine.py  scoring_schema.py
src/security/: enterprise_logging.py  secrets_manager.py
src/ui/: __init__.py
src/utils/: __init__.py  marketcap_utils.py
tests/: __init__.py  conftest.py  test_backtesting.py  test_fixtures.py  test_fs6_integration.py  test_indicators.py  test_risk_management.py  test_rsi_atr_functions.py  test_scoring.py
tests/fixtures/: test_data.py
